fix overflow

--- a/src/styles/calendar.less
+++ b/src/styles/calendar.less
@@ -67,6 +67,7 @@
       .calendar-title-prefix-hint {
         font-weight: 200;
         font-size: 15px;
+        width: 206px;
       }
 
       list-style-type: none;
